@@ -216,6 +216,7 @@ wxMSW:
   wxTE_RICH2 text control
 - fixes for wxLocale::Init and Borland C++
 - Fix for bug whereby owner-drawn buttons didn't draw multiline labels correctly
+- Alt-letter didn't switch focus to a spin ctrl following static control with hotkey
 
 wxMotif:
 
